// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute xbci api should return success 1`] = `
Object {
  "data": Object {
    "payload": Object {
      "AAVE": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ADA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ALGO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ATOM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BAT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BCH": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BFC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BNB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BORA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BTC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BTT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "CELO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "COMP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "CRO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DGB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DOGE": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DOT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "EOS": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ETH": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "FIL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "FTT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "HT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ICX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "KNC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "KSM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "LINA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "LINK": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "LTC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MIOTA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MKR": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MTL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MVL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "NEO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "OKB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "OMG": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ONT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ORBS": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ORC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "QTUM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "REN": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SNX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SRM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SUSHI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SXP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "THETA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "TRX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "UMA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "UNI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "VET": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "VRA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XEM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XLM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XRP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XTZ": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "YFI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ZIL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ZRX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
    },
    "result": 465385.5102740464,
    "sources": Array [],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 465385.5102740464,
  "statusCode": 200,
}
`;

exports[`execute xlci api should return success 1`] = `
Object {
  "data": Object {
    "payload": Object {
      "AAVE": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ADA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ALGO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ATOM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BAT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BCH": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BNB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BTC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "BTT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "CELO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "COMP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "CRO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DGB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DOGE": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "DOT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "EOS": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ETH": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "FIL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "FTT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "HT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ICX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "KNC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "KSM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "LINK": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "LTC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MIOTA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "MKR": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "NEO": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "OKB": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "OMG": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ONT": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ORC": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "QTUM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "REN": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SNX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SRM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SUSHI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "SXP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "THETA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "TRX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "UMA": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "UNI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "VET": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XEM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XLM": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XRP": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "XTZ": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "YFI": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ZIL": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
      "ZRX": Object {
        "quote": Object {
          "USD": Object {
            "price": 100,
          },
        },
      },
    },
    "result": 46725.07166979187,
    "sources": Array [],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 46725.07166979187,
  "statusCode": 200,
}
`;
